force-app/main/default/objects/Restaurant_Order__c/Restaurant_Order__c.object-meta.xml
<CustomObject>
    <label>Restaurant Order</label>
    <nameField>
        <displayFormat>OR-{0000}</displayFormat>
        <label>Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Restaurant Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>