force-app/main/default/objects/Restaurant_Order__c/fields/IsDelivery__c.field-meta.xml
<CustomField>
    <fullName>IsDelivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDelivery</label>
    <type>Checkbox</type>
</CustomField>