force-app/main/default/objects/Restaurant_Order__c/fields/Sum__c.field-meta.xml
<CustomField>
    <fullName>Sum__c</fullName>
    <label>Sum</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>