force-app/main/default/objects/Restaurant_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sum__c</columns>
    <columns>Status__c</columns>
    <columns>Order_Date__c</columns>
    <columns>IsDelivery__c</columns>
    <columns>Delivery_Address__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>